    obsolete in pg_buildext since 178.
  * Also save pg_controldata on catversion changes, pg_upgrade needs it.
    Spotted by Dagfinn Ilmari Mannsåker, thanks!
  * Chown /etc/postgresql to user postgres.
  * pg_ctlcluster: Use "fast" shutdown by default, and remove code to kill -9
    the server if it doesn't react to a --force stop. (Closes: #756008)

 -- Christoph Berg <myon@debian.org>  Sun, 02 Sep 2018 21:23:33 +0200

postgresql-common (193) unstable; urgency=medium

  [ Francois Marier ]
  * Use /run in /usr/lib/tmpfiles.d/postgresql.conf to avoid deprecation
    warning. (Closes: #902875)

  [ Christoph Berg ]
  * pg_buildext: Stop passing srcdir to make invocations.
  * pg_buildext: Copy CFLAGS from environment to COPT so Makefile.global
    picks it up. Notably this will make extension builds use
    -f{debug,file}-prefix-map from dpkg-buildflags.

 -- Christoph Berg <myon@debian.org>  Thu, 23 Aug 2018 12:57:46 +0200

postgresql-common (192) unstable; urgency=medium

  * postgresql@.service: Use AssertPathExists instead of ConditionPathExists
    so trying to operate on non-existing clusters fails loudly.
    (Closes: #891836)
  * postgresql@.service: Add "RequiresMountsFor /etc/postgresql/%I
    /var/lib/postgresql/%I" to depend on mounts.
  * pg_createcluster: Fix error on importing existing clusters, spotted by
    Mark Eichin, thanks! (Closes: #886871)
  * postinst_check_catversion: Ignore errors while determining PGDATA.
  * Move maintainer address to team+postgresql@tracker.debian.org.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 08 Aug 2018 16:21:59 +0200

postgresql-common (191) unstable; urgency=medium

  [ Christoph Berg ]
  * PgCommon cluster_data_directory: Support clusters in and symlinked from
    /etc/postgresql/.
  * t/170_extensions.t: Add dependencies of jsonb_pl{perl,python}.

  [ Christian Ehrhardt ]
  * supported-versions: Add Ubuntu 18.10. (Closes: #898166)
